# banana-slides

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
banana_slides/: __init__.py  cli.py  config.py
banana_slides/core/: __init__.py  generator.py  storage.py
banana_slides/models/: __init__.py  project.py
banana_slides/services/: __init__.py  ai_service_manager.py  inpainting_service.py  prompts.py  task_manager.py
banana_slides/services/ai_providers/: __init__.py
banana_slides/services/ai_providers/image/: __init__.py  openai_provider.py
banana_slides/services/ai_providers/ocr/: __init__.py
banana_slides/services/ai_providers/text/: __init__.py  openai_provider.py
banana_slides/services/image_editability/: factories.py  inpaint_providers.py  text_attribute_extractors.py
banana_slides/utils/: pptx_builder.py
frontend/src/api/: endpoints.ts
frontend/src/pages/: SlidePreview.tsx
frontend/src/store/: useProjectStore.ts
