[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["banana_slides*"]

[project]
name = "banana-slides"
version = "1.0.0"
description = "Banana Slides – AI PPT generator CLI tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "img2pdf>=0.5.1",
    "markitdown",
    "openai>=1.0.0",
    "pillow>=12.0.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-pptx>=1.0.0",
    "rich>=13.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.1.0",
    "httpx>=0.25.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[project.scripts]
banana-slides = "banana_slides.cli:cli"

[tool.uv]
package = true
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pytest.ini_options]
testpaths = ["banana_slides/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
